Fix: Add cross-env for memory settings (Windows + Linux compatible)
- Installed cross-env as devDependency for cross-platform compatibility
- Set NODE_OPTIONS to 4096 MB for build process
- Prevents 'JavaScript heap out of memory' on AWS EC2 Ubuntu
- Works on both Windows (development) and Linux (production)
- Tested locally: builds successfully with 197 files in dist/

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dev:automated": "tsx watch src/server-automated.ts",
     "start:automated": "tsx src/server-automated.ts",
     "postinstall": "prisma generate",
-    "build": "prisma generate && tsc",
-    "vercel-build": "prisma generate && tsc",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 prisma generate && cross-env NODE_OPTIONS=--max-old-space-size=4096 tsc",
+    "vercel-build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 prisma generate && cross-env NODE_OPTIONS=--max-old-space-size=4096 tsc",
     "start": "node src/app.js",
     "worker": "node dist/worker.js",
     "worker:dev": "tsx watch src/worker.ts",
@@ -132,6 +132,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@vercel/node": "^2.3.0",
+    "cross-env": "^10.1.0",
     "dotenv-cli": "^11.0.0",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
