Fix: Recursively copy all .js files during build - includes src/controllers and all nested JS files

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dev:automated": "tsx watch src/server-automated.ts",
     "start:automated": "tsx src/server-automated.ts",
     "postinstall": "prisma generate",
-    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 prisma generate && cross-env NODE_OPTIONS=--max-old-space-size=4096 tsc && node -e \"const fs = require('fs'); const path = require('path'); ['services', 'jobs', 'workers', 'routes', 'cron'].forEach(dir => { const src = path.join(process.cwd(), dir); const dest = path.join(process.cwd(), 'dist', dir); if (fs.existsSync(src)) { fs.cpSync(src, dest, { recursive: true, filter: (s) => s.endsWith('.js') || fs.statSync(s).isDirectory() }); console.log('Copied', dir); } });\"",
-    "vercel-build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 prisma generate && cross-env NODE_OPTIONS=--max-old-space-size=4096 tsc && node -e \"const fs = require('fs'); const path = require('path'); ['services', 'jobs', 'workers', 'routes', 'cron'].forEach(dir => { const src = path.join(process.cwd(), dir); const dest = path.join(process.cwd(), 'dist', dir); if (fs.existsSync(src)) { fs.cpSync(src, dest, { recursive: true, filter: (s) => s.endsWith('.js') || fs.statSync(s).isDirectory() }); console.log('Copied', dir); } });\"",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 prisma generate && cross-env NODE_OPTIONS=--max-old-space-size=4096 tsc && node copy-js-files.js",
+    "vercel-build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 prisma generate && cross-env NODE_OPTIONS=--max-old-space-size=4096 tsc && node copy-js-files.js",
     "start": "node src/app.js",
     "worker": "node dist/worker.js",
     "worker:dev": "tsx watch src/worker.ts",
